--- a/src/style.css
+++ b/src/style.css
@@ -2,3 +2,18 @@
 h1 { font-size: 2.0em; }
 h2 { font-size: 1.8em; }
 h3 { font-size: 1.5em; }
+
+/* Add some space above the map */
+#map svg {
+    margin-top: 3em;
+}
+
+.land {
+    fill: #eee;
+}
+
+.ward-boundary {
+    fill: none;
+    stroke: #fff;
+    stroke-width: 1px;
+}
