--- a/src/style.css
+++ b/src/style.css
@@ -53,3 +53,9 @@ h3 { font-size: 1.5em; }
     stroke-width: 1px;
 }
 
+.legendTitle {
+    text-anchor: middle;
+    font-size: 1rem;
+    fill: #4F4F4F;
+    font-weight: 300;
+}
