--- a/src/style.css
+++ b/src/style.css
@@ -22,7 +22,7 @@ h3 { font-size: 1.5em; }
 .container {
     position: relative;
     float: left;
-    left: 204px
+    left: 204px;
 }
 
 /* Margin on sidebar headings */
@@ -37,6 +37,19 @@ h3 { font-size: 1.5em; }
 /* Add some space above the map */
 #map svg {
     margin-top: 3em;
+}
+
+#mapLeft {
+    margin-top: 10%;
+    margin-left: 10%;
+}
+
+body {
+}
+
+#maps {
+    width: 100%;
+    height: 100%;
 }
 
 #lad {
