--- a/src/style.css
+++ b/src/style.css
@@ -4,12 +4,13 @@ h2 { font-size: 1.8em; }
 h3 { font-size: 1.5em; }
 
 /* Show sidebar on left up to bootstrap md size */
-@media (min-width: 768px) { /* Controls sidebar textures */
+@media (min-width: 200px) { /* Controls sidebar textures */
   .sidebar {
     position: fixed;
     top: 0;
-    bottom: 0;
     left: 0;
+    width: 100%;
+    height: 60px;
     z-index: 50;
     display: block;
     overflow-x: hidden;
@@ -40,8 +41,8 @@ h3 { font-size: 1.5em; }
 }
 
 #mapLeft {
-    margin-top: 10%;
-    margin-left: 10%;
+    margin-top: 5%;
+    margin-left: 5%;
 }
 
 body {
