--- a/src/style.css
+++ b/src/style.css
@@ -1,22 +1,26 @@
 /* Reduce heading sizes */
-h1 { font-size: 2.0em; }
-h2 { font-size: 1.8em; }
-h3 { font-size: 1.5em; }
+h1 {
+    font-size: 2.0em;
+    text-align: center;
+}
+
+h2 { font-size: 1.4em; }
+h3 { font-size: 1.0em; }
 
 /* Show sidebar on left up to bootstrap md size */
 @media (min-width: 200px) { /* Controls sidebar textures */
-  .sidebar {
+  .navigation {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 60px;
+    height: 200px;
     z-index: 50;
     display: block;
     overflow-x: hidden;
     overflow-y: auto;
     background-color: #f5f5f5;
-    border-right: 1px solid #abc;
+    border-bottom: 2px solid #abc;
   }
 }
 
@@ -26,15 +30,29 @@ h3 { font-size: 1.5em; }
     left: 204px;
 }
 
-/* Margin on sidebar headings */
-.sidebar h4 {
-  margin-top: 1em;
-}
-
 .controls {
     margin: 10px;
 }
 
+.controls li {
+    display:inline-block;
+    width:33%;
+    margin:0;
+    padding:0;
+}
+
+.controls ul {
+    width:100%;
+    margin:0 auto;
+    padding:0;
+    list-style:none;
+    text-align:center;
+}
+
+#subcategory {
+    width: 80%;
+}
+    
 /* Add some space above the map */
 #map svg {
     margin-top: 3em;
