--- a/src/style.css
+++ b/src/style.css
@@ -20,13 +20,8 @@ h3 { font-size: 1.5em; }
   }
 }
 
-.container {
-    position: relative;
+#maps {
     top: 60px;
-    float: left;
-    width: 49%;
-    margin: auto;
-    border: 1px solid black;
 }
 
 /* Margin on sidebar headings */
@@ -44,13 +39,13 @@ h3 { font-size: 1.5em; }
 }
 
 #mapLeft {
-    margin-top: 5%;
-    margin: auto auto auto 0;
+    top: 60px;
+    border: 1px solid black;
 }
 
 #mapRight {
-    margin-top: 5%;
-    margin: auto 0 auto auto;
+    top: 60px;
+    border: 1px solid black;
 }
 
 #svgLeft {
