--- a/src/style.css
+++ b/src/style.css
@@ -33,18 +33,18 @@ h3 { font-size: 1.0em; }
 }
 
 .controls li {
-    display:inline-block;
-    width:33%;
-    margin:0;
-    padding:0;
+    display: inline-block;
+    width: 33%;
+    margin: 0;
+    padding: 0;
 }
 
 .controls ul {
-    width:100%;
-    margin:0 auto;
-    padding:0;
-    list-style:none;
-    text-align:center;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0;
+    list-style: none;
+    text-align: center;
 }
 
 #subcategory {
@@ -79,13 +79,14 @@ h3 { font-size: 1.0em; }
 
 #lad-statistics {
     position: absolute;
-    left: 49%;
-    width: 51%;
+    width: 100%;
     height: 100%;
-    top: 200px;
-    z-index: 2;
+    left: 0;
+    top: 0;
+    z-index: 0;
     background-color: #f5f5f5;
-    border-left: 2px solid #abc;
+    opacity: 0;
+    border: 2px solid #def;
 }
 
 #maps {
@@ -124,4 +125,16 @@ h3 { font-size: 1.0em; }
 
 .axis--x path {
   display: none;
+}
+
+.tooltip {/* Citation: http://bl.ocks.org/d3noob/a22c42db65eb00d4e369, on May 6th 2017 */
+    position: absolute;			
+    text-align: center;			
+    min-width: 30px;
+    min-height: 28px;
+    padding: 2px;
+    background: lightsteelblue;
+    border: 1px solid #222;	
+    border-radius: 8px;			
+    pointer-events: none;			
 }
