--- a/src/style.css
+++ b/src/style.css
@@ -7,62 +7,66 @@ h1 {
 h2 { font-size: 1.4em; }
 h3 { font-size: 1.0em; }
 
-/* Show sidebar on left up to bootstrap md size */
-@media (min-width: 200px) { /* Controls sidebar textures */
-  .navigation {
-    position: fixed;
+body {
+    width: 100%;
+    height: 100%;
+}
+
+/* Properties of navbar */
+.navigation {
     top: 0;
     left: 0;
     width: 100%;
-    height: 200px;
+    height: 22%;
+    padding-bottom: 5px;
     z-index: 50;
     display: block;
     overflow-x: hidden;
     overflow-y: auto;
     background-color: #f5f5f5;
     border-bottom: 2px solid #abc;
-  }
+}
+
+.help ul, .controls ul {
+    list-style-type: none;
+}
+
+.help li, .controls li {
+    display: inline-block;
+}
+
+.help li a {
+    font-size: 18px;
 }
 
 #maps {
-    top: 60px;
-}
-
-.controls {
-    margin: 10px;
-}
-
-.controls li {
-    display: inline-block;
-    width: 33%;
-    margin: 0;
-    padding: 0;
-}
-
-.controls ul {
-    width: 100%;
-    margin: 0 auto;
-    padding: 0;
-    list-style: none;
-    text-align: center;
+    margin-top: 10px;
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 0;
 }
 
 #subcategory {
     width: 80%;
 }
-    
+
+.vcenter { /* From http://stackoverflow.com/questions/20547819/vertical-align-with-bootstrap-3, on May 7th, 2017 */
+    float:none;
+    display:inline-block;
+    vertical-align:middle;
+    margin-right:-4px;
+}
+
 /* Add some space above the map */
 #map svg {
     margin-top: 3em;
 }
 
 #mapLeft {
-    top: 200px;
     border: 1px solid black;
 }
 
 #mapRight {
-    top: 200px;
     border: 1px solid black;
     z-index: 1;
 }
