Fix tab text not appearing

--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,15 @@ body {
     width: 100%;
     height: 100%;
 }
+/*
+.glossary-popup {
+    fill: #000;
+    z-index: 1;
+}
+*/
+#glossary {
+    color: #000000;
+}
 
 /* Define the pop-up bubble when a district is hovered over. Have the */
 /* background to be white with an automatic width depending upon the */
@@ -55,12 +64,23 @@ body {
     float: center;
 }
 
-.tab-help a::before {
-    content: '';
+.tab-help a.about-popup::before {
+    content: 'About';
     position: absolute;
     display: block;
     top: 0; right: 0; bottom: -1px; left: 0;
-    transform: perspective(0.5em) rotateX(-5deg);
+    transform-origin: bottom;
+    background-color: #fff;
+    border: 1px solid #000;
+    border-width: 1px 1px 1px 1px;
+    border-radius: .0em .0em .5em .5em;
+}
+
+.tab-help a.glossary-popup::before {
+    content: 'Glossary';
+    position: absolute;
+    display: block;
+    top: 0; right: 0; bottom: -1px; left: 0;
     transform-origin: bottom;
     background-color: #fff;
     border: 1px solid #000;
